[project]
name = "hazardous"
description = "Predictive Competing Risks and Survival Analysis."
version = "0.1.0"
authors = [
    { name = "Olivier Grisel", email = "olivier.grisel@ensta.org" },
    { name = "Vincent Maladière", email = "vincent.maladiere@inria.fr" } 
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    # TODO: implement KM and make this a soft dependency for the
    # doc and tests.
    "lifelines",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest",
    "pytest-cov",
    "pandas",
]
oldest_deps = [
    "numpy==1.22",
    "scikit-learn==1.1.3",
    "pandas==1.5.1",
]
doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "matplotlib",
    "pillow",  # to scrape images from the examples
]

[project.urls]
"Homepage" = "https://github.com/soda-inria/hazardous"
"Bug Tracker" = "https://github.com/soda-inria/hazardous/issues"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', 'py311']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''

